# tree-sitter-xml

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  jsconfig.json  package-lock.json  package.json  pyproject.toml  scripts.js  setup.py  tree-sitter.json
.github/workflows/: ci.yml  fuzz.yml  publish.yml
bindings/c/: tree-sitter-dtd.pc.in  tree-sitter-xml.h  tree-sitter-xml.pc.in
bindings/go/: binding.go  binding_test.go  dtd.go  go.mod  xml.go
bindings/node/: binding.cc  binding_test.js  dtd.js  index.d.ts  index.js  xml.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_xml/: __init__.py  __init__.pyi  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterXMLTests/: TreeSitterXMLTests.swift
bindings/swift/dtd/TreeSitterDTD/: dtd.h
common/: common.mak  common.mjs  scanner.h
dtd/: CMakeLists.txt  Makefile  grammar.js  package.json
dtd/src/: grammar.json  node-types.json  parser.c  scanner.c
dtd/test/corpus/: issues.txt  standard.txt
examples/: .gitignore
queries/dtd/: highlights.scm
queries/xml/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: entities.txt  errors.txt  examples.txt  extra.txt  issues.txt  other.txt  standard.txt
test/highlight/: test.dtd  test.xml
tree-sitter-dtd/: grammar.js
tree-sitter-dtd/src/: scanner.c
tree-sitter-xml/: grammar.js
tree-sitter-xml/src/: grammar.json  parser.c  scanner.c
tree-sitter-xml/test/corpus/: errors.txt
xml/: CMakeLists.txt  Makefile  grammar.js  package.json
xml/src/: grammar.json  node-types.json  parser.c  scanner.c
xml/test/corpus/: errors.txt  issues.txt
