[package]
name = "tree-sitter-xml"
description = "XML grammar for tree-sitter"
version = "0.5.3"
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "dtd", "xml"]
categories = ["parsing", "text-editors"]
authors = [
  "ObserverOfTime <chronobserver@disroot.org>",
  "Amaan Qureshi <amaanq12@gmail.com>"
]
repository = "https://github.com/tree-sitter-grammars/tree-sitter-xml"
edition = "2021"

build = "bindings/rust/build.rs"
include = [
  "common/*",
  "bindings/rust/*",
  "dtd/grammar.js",
  "dtd/src/*",
  "dtd/queries/*",
  "xml/grammar.js",
  "xml/src/*",
  "xml/queries/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.10"

[build-dependencies]
cc = "^1.0"
