[package]
name = "tree-sitter-xml"
description = "XML & DTD grammars for tree-sitter"
version = "0.7.0"
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "dtd", "xml"]
categories = ["parsing", "text-editors"]
authors = [
  "ObserverOfTime <chronobserver@disroot.org>",
  "Amaan Qureshi <amaanq12@gmail.com>",
]
repository = "https://github.com/tree-sitter-grammars/tree-sitter-xml"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "LICENSE",
  "common/*",
  "bindings/rust/*",
  "dtd/grammar.js",
  "dtd/src/*",
  "xml/grammar.js",
  "xml/src/*",
  "queries/*",
  "tree-sitter.json",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1"

[dev-dependencies]
tree-sitter = "0.24"
